src/rust/sqlite-sys/src/bindings.rs

extern "C" {
    pub fn sqlite3_bind_int64(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: sqlite3_int64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_null(arg1: *mut sqlite3_stmt, arg2: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_text(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: *const libc::c_char,
        arg4: libc::c_int,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_text16(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: *const libc::c_void,
        arg4: libc::c_int,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_text64(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: *const libc::c_char,
        arg4: sqlite3_uint64,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        encoding: libc::c_uchar,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_value(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: *const sqlite3_value,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_pointer(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: *mut libc::c_void,
        arg4: *const libc::c_char,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_zeroblob(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        n: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_zeroblob64(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: sqlite3_uint64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_parameter_count(arg1: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_parameter_name(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_bind_parameter_index(
        arg1: *mut sqlite3_stmt,
        zName: *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_clear_bindings(arg1: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_column_count(pStmt: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_column_name(arg1: *mut sqlite3_stmt, N: libc::c_int) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_column_name16(arg1: *mut sqlite3_stmt, N: libc::c_int) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_column_database_name(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_column_database_name16(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_column_table_name(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_column_table_name16(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_column_origin_name(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_column_origin_name16(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_column_decltype(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_column_decltype16(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
    ) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_step(arg1: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_data_count(pStmt: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_column_blob(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_column_double(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> f64;
}
extern "C" {
    pub fn sqlite3_column_int(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_column_int64(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> sqlite3_int64;
}
extern "C" {
    pub fn sqlite3_column_text(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> *const libc::c_uchar;
}
extern "C" {
    pub fn sqlite3_column_text16(arg1: *mut sqlite3_stmt, iCol: libc::c_int)
        -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_column_value(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> *mut sqlite3_value;
}
extern "C" {
    pub fn sqlite3_column_bytes(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_column_bytes16(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_column_type(arg1: *mut sqlite3_stmt, iCol: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_finalize(pStmt: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_reset(pStmt: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_create_function(
        db: *mut sqlite3,
        zFunctionName: *const libc::c_char,
        nArg: libc::c_int,
        eTextRep: libc::c_int,
        pApp: *mut libc::c_void,
        xFunc: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_create_function16(
        db: *mut sqlite3,
        zFunctionName: *const libc::c_void,
        nArg: libc::c_int,
        eTextRep: libc::c_int,
        pApp: *mut libc::c_void,
        xFunc: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_create_function_v2(
        db: *mut sqlite3,
        zFunctionName: *const libc::c_char,
        nArg: libc::c_int,
        eTextRep: libc::c_int,
        pApp: *mut libc::c_void,
        xFunc: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
        xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_create_window_function(
        db: *mut sqlite3,
        zFunctionName: *const libc::c_char,
        nArg: libc::c_int,
        eTextRep: libc::c_int,
        pApp: *mut libc::c_void,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
        xValue: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
        xInverse: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: libc::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_aggregate_count(arg1: *mut sqlite3_context) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_expired(arg1: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_transfer_bindings(
        arg1: *mut sqlite3_stmt,
        arg2: *mut sqlite3_stmt,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_global_recover() -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_thread_cleanup();
}
extern "C" {
    pub fn sqlite3_memory_alarm(
        arg1: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void, arg2: sqlite3_int64, arg3: libc::c_int),
        >,
        arg2: *mut libc::c_void,
        arg3: sqlite3_int64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_blob(arg1: *mut sqlite3_value) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_value_double(arg1: *mut sqlite3_value) -> f64;
}
extern "C" {
    pub fn sqlite3_value_int(arg1: *mut sqlite3_value) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_int64(arg1: *mut sqlite3_value) -> sqlite3_int64;
}
extern "C" {
    pub fn sqlite3_value_pointer(
        arg1: *mut sqlite3_value,
        arg2: *const libc::c_char,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_value_text(arg1: *mut sqlite3_value) -> *const libc::c_uchar;
}
extern "C" {
    pub fn sqlite3_value_text16(arg1: *mut sqlite3_value) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_value_text16le(arg1: *mut sqlite3_value) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_value_text16be(arg1: *mut sqlite3_value) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_value_bytes(arg1: *mut sqlite3_value) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_bytes16(arg1: *mut sqlite3_value) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_type(arg1: *mut sqlite3_value) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_numeric_type(arg1: *mut sqlite3_value) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_nochange(arg1: *mut sqlite3_value) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_frombind(arg1: *mut sqlite3_value) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_value_subtype(arg1: *mut sqlite3_value) -> libc::c_uint;
}
extern "C" {
    pub fn sqlite3_value_dup(arg1: *const sqlite3_value) -> *mut sqlite3_value;
}
extern "C" {
    pub fn sqlite3_value_free(arg1: *mut sqlite3_value);
}
extern "C" {
    pub fn sqlite3_aggregate_context(
        arg1: *mut sqlite3_context,
        nBytes: libc::c_int,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_user_data(arg1: *mut sqlite3_context) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_context_db_handle(arg1: *mut sqlite3_context) -> *mut sqlite3;
}
extern "C" {
    pub fn sqlite3_get_auxdata(arg1: *mut sqlite3_context, N: libc::c_int) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_set_auxdata(
        arg1: *mut sqlite3_context,
        N: libc::c_int,
        arg2: *mut libc::c_void,
        arg3: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    );
}
